# Cacao

./: .gitignore  CLAUDE.md  COMPONENT_BUILD_SYSTEM.md  Dockerfile  MANIFEST.in  NEW_COMPONENTS.md  README.md  ROADMAP.md  VERSION  cacao.json  cacao_cli.py  dev.ps1  docker-compose.yml  improments.md  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple.py  test.py  test_import_debug.py  test_route_registration_debug.py  test_table_context.py  test_table_server_fix.py  tukuy_showcase.py
.claude/skills/: cacao-component.md  cacao-debug.md  cacao-example.md  cacao-handler.md
.github/: copilot-instructions.md
.github/prompts/: commit_gen.prompt.md  docs_gen.prompt.md  docs_update.prompt.md  new_component.prompt.md  test.prompt.md
.github/workflows/: ci.yml  dev-version.yml  pages.yml  pre-release.yml  prerelease-version.yml  publish.yml
cacao/: README.md  __init__.py  config.py  desktop.py  extensions.py  notebook.py  requirements.txt  simple.py  testing.py
cacao.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cacao/cli/: __init__.py  commands.py  deploy.py  gallery.py  install.py  runner.py  scaffolding.py  share.py
cacao/client/: index.html  package.json  tsconfig.json  vite.config.ts
cacao/core/: __init__.py  app.py  component_compiler.py  decorators.py  pwa.py  server.py  state.py  theme.py
cacao/frontend/: build.js  package-lock.json  package.json
cacao/server/: __init__.py  agent.py  app.py  auth.py  batch.py  chart.py  data.py  effects.py  errors.py  events.py  interface.py  llm.py  log.py  middleware.py  observability.py  persist.py  plugin.py  security.py  server.py  session.py  session_persist.py  signal.py  sql.py  tasks.py  (+2 more)
cacao_tools/: __init__.py  app.py
cacao_v2/: ROADMAP.md  STREAMLIT_KILLER_STUDY.md  __init__.py  simple.py
docs/: STRUCTURE.md  THEME_IMPLEMENTATION_PLAN.md  api_reference.py  cli.md  cookbook_index.py  index.md  playground.py
examples/: README.md  color_picker_example.py  components_showcase_example.py  pandas_example.py  pandas_table_desktop_app.py  pandas_table_example.py  pandas_table_with_filters_desktop_app.py  password_generator_example.py  plotting_example.py  pwa_example.py  sidebar_layout_example.py  simple_app_example.py  simple_desktop_app.py  simple_pwa_app.py  standard_app_example.py
investigation/: FINAL-PLAN.md  FINDINGS.md  design-tokens.css
scripts/: gen_ref_pages.py
showcase/: analytics.py  build.py  dashboard.py  devtools.py  gallery.py  hello.py  metrics.py
test/: conftest.py  test_advanced_table_filters.py  test_data_display.py  test_package.py  test_pandas_table_server.py  test_react_integration.py  test_ui_components.py
tests/: test_batch.py  test_data.py  test_session.py  test_signal.py  test_testing.py  test_ui.py
(+509 files in other folders)
