[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cacao"
version = "0.1.0"
description = "Cacao is a high-performance, reactive web framework for Python, designed to simplify building interactive dashboards and data apps."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Juan Denis", email = "Juan@vene.co" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "websockets",
    "asyncio",
    "watchfiles",
    "colorama"
]

[project.scripts]
cacao = "cacao.cli:run_cli"
