[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cacao"
version = "2.0.0"
description = "High-performance reactive web framework for Python. Build dashboards, internal tools, and data apps with a Streamlit-like API but 10x faster."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Juan Denis", email = "juan@vene.co" }
]
keywords = [
    "web",
    "framework",
    "dashboard",
    "reactive",
    "websocket",
    "python",
    "streamlit",
    "data",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.32.0",
    "watchfiles>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
cacao = "cacao.cli:main"

[project.urls]
Homepage = "https://github.com/jhd3197/Cacao"
Documentation = "https://github.com/jhd3197/Cacao#readme"
Repository = "https://github.com/jhd3197/Cacao"
Issues = "https://github.com/jhd3197/Cacao/issues"

[tool.hatch.build.targets.wheel]
packages = ["cacao"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
